[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/interact/interact.gd" type="Script" id=1]
[ext_resource path="res://player/Theme.tres" type="Theme" id=2]

[node name="Interact" type="RayCast"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 2
script = ExtResource( 1 )

[node name="InteractPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="InteractText" type="Label" parent="."]
modulate = Color( 0.427451, 0.792157, 0.94902, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 80.0
margin_right = 173.0
margin_bottom = 238.0
theme = ExtResource( 2 )
text = "Interact"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractTween" type="Tween" parent="."]

[node name="InteractTimer" type="Timer" parent="."]
one_shot = true
